--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             </ul>
         </nav>
         <div class="banner">
+            
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-desription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p><br>
                 <button class="button-primary">Download CV</button>
                 <button class="button-primary">Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
-        </div>
-
+           
     </header>
     <main>
 
