finished the resume section

--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@
                         <p class="resure-item-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
-
-
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="button-primary">Download CV</button>
             </div>
         </section>
     </main>
